mutants.out.old/log/src__lib.rs_line_164_col_9.log

*** src/lib.rs:164:9: replace RefineConfig::with_alpha -> Self with Default::default()

*** mutation diff:
--- src/lib.rs
+++ replace RefineConfig::with_alpha -> Self with Default::default()
@@ -156,18 +156,17 @@
         Self { alpha: 0.5, top_k: None }
     }
 }
 
 impl RefineConfig {
     /// Set blending weight.
     #[must_use]
     pub const fn with_alpha(mut self, alpha: f32) -> Self {
-        self.alpha = alpha;
-        self
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     /// Limit output to top k.
     #[must_use]
     pub const fn with_top_k(mut self, top_k: usize) -> Self {
         self.top_k = Some(top_k);
         self
     }


*** /opt/homebrew/bin/cargo test --no-run --verbose --package=rank-refine@0.7.9
       Fresh unicode-ident v1.0.22
       Fresh cfg-if v1.0.4
       Fresh autocfg v1.5.0
       Fresh regex-syntax v0.8.8
       Fresh either v1.15.0
       Fresh proc-macro2 v1.0.103
       Fresh bitflags v2.10.0
       Fresh once_cell v1.21.3
       Fresh ryu v1.0.20
       Fresh libc v0.2.177
       Fresh quote v1.0.42
       Fresh serde_core v1.0.228
       Fresh crossbeam-utils v0.8.21
       Fresh ciborium-io v0.2.2
       Fresh clap_lex v0.7.6
       Fresh fastrand v2.3.0
       Fresh itoa v1.0.15
       Fresh plotters-backend v0.3.7
       Fresh anstyle v1.0.13
       Fresh memchr v2.7.6
       Fresh regex-automata v0.4.13
       Fresh syn v2.0.111
       Fresh getrandom v0.3.4
       Fresh crossbeam-epoch v0.9.18
       Fresh errno v0.3.14
       Fresh num-traits v0.2.19
       Fresh plotters-svg v0.3.7
       Fresh wait-timeout v0.2.1
       Fresh serde_json v1.0.145
       Fresh clap_builder v4.5.53
       Fresh itertools v0.10.5
       Fresh same-file v1.0.6
       Fresh quick-error v1.2.3
       Fresh bit-vec v0.8.0
       Fresh cast v0.3.0
       Fresh fnv v1.0.7
       Fresh zerocopy-derive v0.8.30
       Fresh serde_derive v1.0.228
       Fresh rand_core v0.9.3
       Fresh rustix v1.1.2
       Fresh crossbeam-deque v0.8.6
       Fresh clap v4.5.53
       Fresh criterion-plot v0.5.0
       Fresh bit-set v0.8.0
       Fresh walkdir v2.5.0
       Fresh plotters v0.3.7
       Fresh regex v1.12.2
       Fresh is-terminal v0.4.17
       Fresh unarray v0.1.4
       Fresh oorandom v11.1.5
       Fresh anes v0.1.6
       Fresh zerocopy v0.8.30
       Fresh serde v1.0.228
       Fresh tempfile v3.23.0
       Fresh rayon-core v1.13.0
       Fresh rand_xorshift v0.4.0
       Fresh rand v0.9.2
       Dirty rank-refine v0.7.9 (/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp): the file `src/colbert.rs` has changed (1764195559.661679008s, 3s after last build at 1764195556.436103455s)
   Compiling rank-refine v0.7.9 (/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp)
       Fresh half v2.7.1
       Fresh ppv-lite86 v0.2.21
       Fresh rayon v1.11.0
       Fresh tinytemplate v1.2.1
       Fresh rusty-fork v0.3.1
       Fresh ciborium-ll v0.2.2
       Fresh rand_chacha v0.9.0
       Fresh ciborium v0.2.2
       Fresh proptest v1.9.0
     Running `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=a9145a0b8e512428 -C extra-filename=-a97128c91e1742ac --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/deps`
       Fresh criterion v0.5.1
     Running `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=d60e10c1e4de765d -C extra-filename=-66be09a2c0c6ed5c --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/deps --extern criterion=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/deps/libcriterion-a8d57b2e80b47536.rlib --extern proptest=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/deps/libproptest-0cbeba200425c4c9.rlib`
warning: unused variable: `alpha`
   --> src/lib.rs:163:39
    |
163 |     pub const fn with_alpha(mut self, alpha: f32) -> Self {
    |                                       ^^^^^ help: if this is intentional, prefix it with an underscore: `_alpha`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error[E0015]: cannot call non-const associated function `<RefineConfig as Default>::default` in constant functions
   --> src/lib.rs:164:9
    |
164 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^
    |
    = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

For more information about this error, try `rustc --explain E0015`.
warning: `rank-refine` (lib) generated 1 warning
error: could not compile `rank-refine` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=a9145a0b8e512428 -C extra-filename=-a97128c91e1742ac --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `rank-refine` (lib test) generated 1 warning (1 duplicate)
error: could not compile `rank-refine` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=d60e10c1e4de765d -C extra-filename=-66be09a2c0c6ed5c --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/deps --extern criterion=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/deps/libcriterion-a8d57b2e80b47536.rlib --extern proptest=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-q9Nsw0.tmp/target/debug/deps/libproptest-0cbeba200425c4c9.rlib` (exit status: 1)

*** result: Failure(101)
